--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html>
     <head>
         <title>HOME Page</title>
-        <link rel="stylesheet" href="./site.css"/>
-        <script src="./site.js" defer></script>
+        <link rel="stylesheet" href="./css/site.css"/>
+        <script src="./js/site.js" defer></script>
     </head>
     <body>
         <h1>HOME PAGE</h1>
         <div class="slideshow"> 
             <img id="slideshowImage" 
-            src="./images/Bella1.jpg"/>
+            src="https://img.freepik.com/premium-photo/adorable-cute-kawaii-cat-sticker-design-illustration_784625-2243.jpg?w=360"/>
         </div>
         <div id="quoteOfTheDay"></div>
-
-        <p></p>
+        <h2>MENU</h2>
+        <p><a href="index.html">HOME PAGE</a></p>
+        <p><a href="skills.html">MY SKILLS</a></p>
+        <p><a href="projects.html">MY PROJECTS</a></p>
+        <p><a href="aboutme.html">ABOUT ME</a></p>
     </body>
 </html>
